[gd_scene load_steps=11 format=2]

[ext_resource path="res://source/character/Character.gd" type="Script" id=1]
[ext_resource path="res://source/particles/ParticleSpawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://graphics/images/characters/dummy.png" type="Texture" id=3]
[ext_resource path="res://addons/finite_state_machine/source/FiniteStateMachine.gd" type="Script" id=4]
[ext_resource path="res://addons/finite_state_machine/icons/fsm.png" type="Texture" id=5]
[ext_resource path="res://source/character/states/Die.gd" type="Script" id=6]
[ext_resource path="res://addons/finite_state_machine/icons/state.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn_explosion"
}, {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="CapsuleShape2D" id=2]
height = 28.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25, 32 )

[node name="Character" type="KinematicBody2D" groups=[
"Character",
]]
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 1 )

[node name="ParticleSpawner" parent="." instance=ExtResource( 2 )]

[node name="Lower" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lower"]

[node name="Sprite" type="Sprite" parent="Lower"]
texture = ExtResource( 3 )
offset = Vector2( 0, -32 )

[node name="Upper" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Upper"]

[node name="Sprite" type="Sprite" parent="Upper"]
position = Vector2( 0, -32 )
texture = ExtResource( 3 )

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource( 4 )
__meta__ = {
"_editor_icon": ExtResource( 5 )
}

[node name="Die" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 6 )
__meta__ = {
"_editor_icon": ExtResource( 7 )
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -26 )
shape = SubResource( 2 )

[node name="HitArea" type="Area2D" parent="."]
position = Vector2( 40, -32 )
collision_layer = 0
collision_mask = 5
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
shape = SubResource( 3 )
[connection signal="died" from="." to="." method="_on_Character_died"]
[connection signal="animation_finished" from="Upper/AnimationPlayer" to="." method="_on_Upper_AnimationPlayer_animation_finished"]
[connection signal="state_changed" from="FiniteStateMachine" to="." method="_on_FiniteStateMachine_state_changed"]
